--- a/smsCA2/nbproject/project.properties
+++ b/smsCA2/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.ojdbc7.jar=C:\\Users\\MS\\Desktop\\ojdbc7.jar
+file.reference.ojdbc7.jar-1=C:\\Users\\S\u00f8ren\\Documents\\Datamatiker\\3. sem\\ojdbc7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc7.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${file.reference.ojdbc7.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
