--- a/smsCA2/nbproject/project.properties
+++ b/smsCA2/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.gson-2.3.1.jar=C:\\Users\\MS\\Downloads\\gson-2.3.1.jar
 file.reference.ojdbc7.jar=C:\\Users\\MS\\Desktop\\ojdbc7.jar
 includes=**
 j2ee.compile.on.save=true
@@ -41,18 +42,21 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc7.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${file.reference.gson-2.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
